manifest/FortunePodWithVolumes.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fortune
  labels:
    name: fortune
spec:
  containers:
  - name: html-generator
    image: enggrupinder/fortune
    volumeMounts:
      - name: html
        mountPath: /var/htdocs
  - name: web-server
    image: nginx:alpine
    volumeMounts:
     - name: html
       mountPath: /usr/share/nginx/html
       readOnly: true
    ports:
     - containerPort: 80
       protocol: TCP
  volumes:
  - name: html
    emptyDir: {}
