manifest/ingress-jenkins.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
spec:
  rules:
  - http:
      paths:
      - path: /cto
        pathType: Prefix
        backend:
          service:      
            name: jenkins 
            port:
              number: 8080
